--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@asymmetrik/ngx-leaflet": "^16.0.1",
+    "appsettings-json-reader": "^2.0.2",
     "leaflet": "^1.9.4",
     "ngx-markdown": "^16.0.0",
     "rxjs": "~7.8.0",
